tests/expectations/compiler/dyn_record/dyn_record_passthrough.out
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:2:19
     |
   2 |     fn main(r: dyn) -> address {
     |                   ^
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:7:16
     |
   7 | fn inner(r: dyn) -> address {
     |                ^
